force-app/main/default/objects/ucinn_portal_Interim_Employment__c/ucinn_portal_Interim_Employment__c.object-meta.xml
<CustomObject>
    <label>Interim Employment</label>
    <nameField>
        <label>Interim Employment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interim Employments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>