force-app/main/default/objects/ucinn_portal_Interim_Employment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interim Employments</relationshipLabel>
    <relationshipName>ucinn_portal_Interim_Employments</relationshipName>
    <type>Lookup</type>
</CustomField>