force-app/main/default/objects/ucinn_portal_Interim_Employment__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <length>40</length>
    <type>Text</type>
</CustomField>