force-app/main/default/objects/ucinn_portal_Interim_Employment__c/fields/Interim__c.field-meta.xml
<CustomField>
    <fullName>Interim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interim</label>
    <referenceTo>ucinn_ascendv2__Interim__c</referenceTo>
    <relationshipLabel>Interim Employments</relationshipLabel>
    <relationshipName>ucinn_portal_Interim_Employments</relationshipName>
    <type>Lookup</type>
</CustomField>