force-app/main/default/objects/ucinn_portal_Interim_Employment__c/fields/Is_Possible_Duplicate_Checked__c.field-meta.xml
<CustomField>
    <fullName>Is_Possible_Duplicate_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Possible Duplicate Checked</label>
    <type>Checkbox</type>
</CustomField>