force-app/main/default/objects/ucinn_portal_Interim_Employment__c/fields/Manual_Review_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manual_Review_Reason__c</fullName>
    <label>Manual Review Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>